--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
             "args": [
                 "${workspaceFolder}/src/index.ts"
             ],
-            "env": { "TS_NODE_PROJECT": "${workspaceFolder}/tsconfig.json" }
+            "env": { "TS_NODE_PROJECT": "${workspaceFolder}/tsconfig.json", "TS_NODE_FILES": "true" }
         }
     ]
 }
