--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test-all": "jest",
-    "test":"jest src/final/index.test.ts"
+    "test": "jest src/final/index.test.ts"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.13",
+    "@types/node": "^12.7.4",
     "jest": "^24.8.0",
     "ts-jest": "^24.0.2"
   }
